# app/api/handler.go
@@ -4,6 +4,7 @@ import (
 	"github.com/evandroferreiras/gopher-city-bank/app/modules/account"
 	"github.com/evandroferreiras/gopher-city-bank/app/modules/healthcheck"
 	"github.com/evandroferreiras/gopher-city-bank/app/modules/login"
+	"github.com/evandroferreiras/gopher-city-bank/app/modules/transfer"
 )
 
 // Handler is the struct for API
@@ -11,6 +12,7 @@ type Handler struct {
 	healthCheck *healthcheck.Handler
 	account     *account.Handler
 	login       *login.Handler
+	transfer    *transfer.Handler
 }
 
 // NewHandler is a constructor to API Handler
@@ -19,5 +21,6 @@ func NewHandler() *Handler {
 		healthCheck: healthcheck.NewHandler(),
 		account:     account.NewHandler(),
 		login:       login.NewHandler(),
+		transfer:    transfer.NewHandler(),
 	}
 }
